--- a/MedicalLink/MedicalLink.csproj
+++ b/MedicalLink/MedicalLink.csproj
@@ -278,6 +278,12 @@
     <Compile Include="BaoCao\BC43_SoThuThuatCLS\ucBC43_SoThuThuatCLS.Designer.cs">
       <DependentUpon>ucBC43_SoThuThuatCLS.cs</DependentUpon>
     </Compile>
+    <Compile Include="BaoCao\BC45_TinhHinhThanhToan\ucBC46_TinhHinhThanhToan.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BaoCao\BC45_TinhHinhThanhToan\ucBC46_TinhHinhThanhToan.Designer.cs">
+      <DependentUpon>ucBC46_TinhHinhThanhToan.cs</DependentUpon>
+    </Compile>
     <Compile Include="BaoCao\BCBHYT21Chenh2018\ucBCBHYT21Chenh2018.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1391,6 +1397,9 @@
     <EmbeddedResource Include="BaoCao\BC43_SoThuThuatCLS\ucBC43_SoThuThuatCLS.resx">
       <DependentUpon>ucBC43_SoThuThuatCLS.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="BaoCao\BC45_TinhHinhThanhToan\ucBC46_TinhHinhThanhToan.resx">
+      <DependentUpon>ucBC46_TinhHinhThanhToan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BaoCao\BCBHYT21Chenh2018\ucBCBHYT21Chenh2018.resx">
       <DependentUpon>ucBCBHYT21Chenh2018.cs</DependentUpon>
     </EmbeddedResource>
@@ -2217,6 +2226,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Templates\0_ToolsMayXetNghiemNhomBC_Export.xlsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Templates\BC_46_TinhHinhThanhToanBNRaVien.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
